--- a/next3.html
+++ b/next3.html
@@ -102,7 +102,7 @@ to our future.</p>
 </div></div>
 
 <p class="nex">
-<a href="">NEXT</a>
+<a href="next4.html">NEXT</a>
 </p>
 
 <div class="foo">
